// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoadMore/> renders 1`] = `
<div>
  <div
    class="loadMoreWrapper-0-2-1"
  >
    <button
      class="loadMoreButton-0-2-2"
      data-testid="load-more"
    >
      Load More
    </button>
  </div>
</div>
`;

exports[`<LoadMore/> renders while loading 1`] = `
<div>
  <div
    class="loadMoreWrapper-0-2-1"
  >
    <button
      class="loadMoreButton-0-2-2"
      data-testid="load-more"
      disabled=""
    >
      Loading...
    </button>
  </div>
</div>
`;
